# mediascribe

./: .gitignore  LICENSE  README.es.md  README.md  package-lock.json  package.json
.github/workflows/: test.yml
docs/: PLAN.md
scripts/: fetch-ffmpeg.ps1  fetch-ffmpeg.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/src/: api_pricing.rs  audio.rs  chunk.rs  commands.rs  ffmpeg_sidecar.rs  lib.rs  main.rs  model_manager.rs  prompt.rs  settings.rs  srt.rs
src-tauri/src/engines/: api.rs  local.rs  mod.rs
src/lib/: api.ts  types.ts
src/routes/: +page.svelte
