[package]
name = "mediascribe"
version = "0.1.0"
description = "Cross-platform desktop app to transcribe video/audio with local Whisper or OpenAI API"
authors = ["Ruben Contreras <58892664+rcontreras1337@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mediascribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# whisper-rs and hound are gated behind a feature flag so the project still
# compiles on machines without LLVM/libclang. Once LLVM is installed enable
# `local-engine` (or `cuda`) and the local Whisper engine becomes available.
local-engine = ["whisper-rs", "hound"]
cuda = ["local-engine", "whisper-rs/cuda"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
whisper-rs = { version = "0.13", optional = true }
hound = { version = "3.5", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"

